@@ -1,5 +1,6 @@
 Alpha 2.0 (Gabriele Giuseppini) - Changes:
- - Marginally faster
+ - Slightly faster
+ - More realistic water flows
  - Added menu and keyboard shortcuts (+/-) for zoom
  - Revamped settings window and added Destroy Radius
  - Added an icon to the application
